--- a/style.css
+++ b/style.css
@@ -8,5 +8,7 @@ img{ display: block;
 }
 button{ border: 1px solid black;
 border-radius: 30px;
-transition:all 200ms ease-in-out;}
-button:hover{ color: brown;}
+transition:all 20ms ease-in-out;}
+button:hover{ background-color: brown;
+}
+.picture{max-width: 100;}
