--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{ font-family: Arial, Helvetica, sans-serif;
     padding: 30px;
     background-image: linear-gradient(87.4deg, rgb(255, 241, 165) 1.9%, rgb(200, 125, 76) 49.7%, rgb(83, 54, 54) 100.5%)
 }
+.card-header{ text-align: center;}
 img{ display: block;
     width: 400;
 
@@ -11,4 +12,5 @@ border-radius: 30px;
 transition:all 20ms ease-in-out;}
 button:hover{ background-color: brown;
 }
-.picture{max-width: 100;}
+.picture{max-width: 30px;}
+#link{ text-align: end;}
