--- a/style.css
+++ b/style.css
@@ -9,10 +9,14 @@ img{ display: block;
 }
 button{ border: 1px solid black;
 border-radius: 30px;
-transition:all 20ms ease-in-out;}
+margin: 0 auto;
+display: block;
+transition:all 200ms ease-in-out;}
 button:hover{ background-color: brown;
+    cursor: pointer;
 }
 .picture{max-width: 30px;
 margin: 5px 50px ;
-align-self: start;}
-#link{ text-align: end;}
+justify-content: start;}
+#link{ text-align: end;
+}
