updated style.css and index.js

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ border-radius: 30px;
 margin: 0 auto;
 display: block;
 transition:all 200ms ease-in-out;}
-button:hover{ background-color: brown;
+button:hover{ background-color: beige;
     cursor: pointer;
 }
 .picture{max-width: 30px;
