--- a/style.css
+++ b/style.css
@@ -22,3 +22,12 @@ margin: 5px 50px ;
 justify-content: start;}
 #link{ text-align: end;
 }
+.change{ border: 1px solid black;
+border-radius: 30px;
+margin: 0 auto;
+max-width: 100px;
+display: block;
+transition:all 200ms ease-in-out;}
+nav:hover{ background-color:darkslateblue
+    cursor : pointer;
+}
