--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{ font-family: Arial, Helvetica, sans-serif;
     padding: 30px;
-    background-image: linear-gradient(87.4deg, rgb(165, 255, 166) 1.9%, rgb(200, 125, 76) 49.7%, rgb(83, 54, 54) 100.5%)
+    background-image: linear-gradient(87.4deg, rgb(29, 215, 94) 1.9%, rgb(200, 125, 76) 49.7%, rgb(83, 54, 54) 100.5%)
 }
 .card-header{ text-align: center;}
 img{ display: block;
@@ -16,14 +16,13 @@ button:hover{ background-color: beige;
     cursor: pointer;
 }
 .end{ background-image: green;
-color: white;}
+text-decoration-color: white;}
 .picture{max-width: 30px;
 margin: 5px 50px ;
 justify-content: start;}
 #link{ text-align: end;
 }
-.change{ border: 1px solid black;
-border-radius: 30px;
+.change{ 
 margin: 0 auto;
 display: block;
 transition:all 200ms ease-in-out;}
