--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{ font-family: Arial, Helvetica, sans-serif;
     padding: 30px;
-    background-image: linear-gradient(87.4deg, rgb(29, 215, 94) 1.9%, rgb(200, 125, 76) 49.7%, rgb(83, 54, 54) 100.5%)
+    background-image: linear-gradient(87.4deg, rgb(29, 215, 94) 1.9%, rgb(52, 145, 84) 49.7%, rgb(79, 168, 82) 100.5%)
 }
 .card-header{ text-align: center;}
 img{ display: block;
@@ -26,7 +26,8 @@ justify-content: start;}
 margin: 0 auto;
 display: block;
 transition:all 200ms ease-in-out;}
-.change:hover { background-color:darkslateblue;
+.change:hover { background-color:darkgrey;
    max-width: 100px;
+   max-height: 50px;
    cursor: pointer;
 }
