--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{ font-family: Arial, Helvetica, sans-serif;
 .card-header{ text-align: center;}
 img{ display: block;
     width: 400;
+    justify-self: center;
 
 }
 button{ border: 1px solid black;
@@ -21,6 +22,7 @@ text-decoration-color: white;}
 margin: 5px 50px ;
 justify-content: start;}
 #link{ text-align: end;
+    color: white;
 }
 .change{ 
 margin: 0 auto;
