--- a/style.css
+++ b/style.css
@@ -3,10 +3,19 @@ body{ font-family: Arial, Helvetica, sans-serif;
     background-image: linear-gradient(87.4deg, rgb(29, 215, 94) 1.9%, rgb(52, 145, 84) 49.7%, rgb(79, 168, 82) 100.5%)
 }
 .card-header{ text-align: center;}
-img{ display: block;
+.image{ display: block;
     width: 400;
     justify-self: center;
-
+transition:all 200ms ease-in-out;
+}
+.image:hover{ cursor: pointer;
+}
+.picture{ display: block;
+    width: 400;
+    justify-self: center;
+transition:all 200ms ease-in-out;
+}
+.picture:hover{ cursor: pointer;
 }
 main { justify-content: center;}
 button{ border: 1px solid black;
