--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ button{ border: 1px solid black;
 border-radius: 30px;
 margin: 0 auto;
 display: block;
-transition:all 200ms ease-in-out;}
+}
 button:hover{ background-color: beige;
     cursor: pointer;
 }
