updated index.js andstyle.css

--- a/style.css
+++ b/style.css
@@ -8,14 +8,16 @@ body{ font-family: Arial, Helvetica, sans-serif;
     justify-self: center;
 transition:all 200ms ease-in-out;
 }
-.image:hover{ cursor: pointer;
+image:hover{ color: transparent;
+     cursor: pointer;
 }
 .picture{ display: block;
     width: 400;
     justify-self: center;
 transition:all 200ms ease-in-out;
 }
-.picture:hover{ cursor: pointer;
+picture:hover{  color: transparent;
+    cursor: pointer;
 }
 main { justify-content: center;}
 button{ border: 1px solid black;
@@ -36,7 +38,7 @@ text-decoration-color: white;}
 margin: 0 auto;
 display: block;
 transition:all 200ms ease-in-out;}
-.change:hover { background-color:darkgrey;
+ change:hover { background-color:darkgrey;
    max-width: 100px;
    max-height: 50px;
    cursor: pointer;
